@@ -1,3 +1,5 @@
+dev:
+  * add new plottype: velocity change versus time of different station/component combinations together with joint estimate
 v0.6.0:
   * yam can now be used on Windows, tests are passing, but multirpoccesing is probably not yet working (see issue #4)
 v0.5.0:
